Conceitos Intervals/Timeout

--- a/Sites-Estudos/JavaScript/Curso RocketSeat/Arquivos/3-Eventos/index.html
+++ b/Sites-Estudos/JavaScript/Curso RocketSeat/Arquivos/3-Eventos/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso JavaScript</title>
+    <title>Curso JavaScript </title>
     
 </head>
 <body>
-    hello world
+    Hello world!
+
+    <div id="app">
+        <button>press me</button>
+    </div>
 
     <script>
-        //javascript ultima a carregar
-
-        console.log("Hello World")
+        
     </script>
 </body>
 </html>
