--- a/Estudos/CSS/404 Error Page/index.html
+++ b/Estudos/CSS/404 Error Page/index.html
@@ -16,9 +16,9 @@
         </div>
     </div>
 
-    <script type="text/javascript">
+    <script>
         var container = document.querySelector(".container");
-        window.onmousemove = ScreenMove(window.MouseEvent)
+        window.onmousemove = ScreenMove(window.MouseEvent);
 
         function ScreenMove(e){
             var x = -e.clientX/5,
