--- a/Estudos/JavaScript/Curso RocketSeat/Arquivos/3-Eventos/index.html
+++ b/Estudos/JavaScript/Curso RocketSeat/Arquivos/3-Eventos/index.html
@@ -15,6 +15,7 @@
         <br>
         <input type="text" name="nome" id="nome2">
         <button class="botão">press me</button>
+        <br>
     </div>
 
     <script>
@@ -28,7 +29,7 @@
         console.log(inputElement);
         */
 
-
+        /*
         inpElement = document.querySelector("#nome1")
         btnElement = document.querySelector("button.botão")
 
@@ -36,6 +37,23 @@
             var text = inpElement.value;
             alert(text)
         }
+        */
+
+        var linkElement = document.createElement('a');
+        var textElement = document.createTextNode("Acessar RocketSeat");
+
+        linkElement.setAttribute('href', 'https://rocketseat.com.br');
+        linkElement.setAttribute('title', 'Site da RocketSeat');
+        linkElement.appendChild(textElement);
+
+        var containerApp = document.querySelector('#app');
+        containerApp.appendChild(linkElement);
+
+
+        inpElement = document.querySelector("#nome1")
+        containerApp.removeChild(inpElement)
+
+        
     </script>
 </body>
 </html>
