--- a/Estudos/JavaScript/Curso RocketSeat/Arquivos/3-Eventos/index.html
+++ b/Estudos/JavaScript/Curso RocketSeat/Arquivos/3-Eventos/index.html
@@ -10,7 +10,7 @@
     Hello world!
     <div id="app">
         <input type="text" name="nome" id="nome1">
-        <button class="botão">press me</button>
+        <button class="botão">press meeeeee</button>
         <br>
         <br>
         <input type="text" name="nome" id="nome2">
@@ -38,7 +38,7 @@
             alert(text)
         }
         */
-
+        /*
         var linkElement = document.createElement('a');
         var textElement = document.createTextNode("Acessar RocketSeat");
 
@@ -50,8 +50,16 @@
         containerApp.appendChild(linkElement);
 
 
-        inpElement = document.querySelector("#nome1")
-        containerApp.removeChild(inpElement)
+        inpElement = document.querySelector("#nome1");
+        containerApp.removeChild(inpElement);
+        */
+
+        var appElement = document.querySelector("#app");
+        appElement.style.margin = '10px';
+        appElement.style.padding = '10px';
+        appElement.style.width = '500px';
+        appElement.style.height = '100px';
+        appElement.style.backgroundColor = '#f00';
 
         
     </script>
