--- a/Estudos/JavaScript/Curso RocketSeat/JavaScript/4-JS Assincrono/index.html
+++ b/Estudos/JavaScript/Curso RocketSeat/JavaScript/4-JS Assincrono/index.html
@@ -6,7 +6,7 @@
     <title>Ajax</title>
 </head>
 <body>
-    
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> <!-- Axios -->
     <script src="main.js"></script>
 </body>
 </html>
