--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/index.html
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/index.html
@@ -6,6 +6,11 @@
     <title>Projeto Google Glass</title>
 
     <style>
+        body
+        {
+            background-image: url("_imagens/bg.jpg");
+            background-color: #28F52E;
+        }
         p
         {
             text-align: justify;
