--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/index.html
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/index.html
@@ -4,18 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Google Glass</title>
-
-    <style>
-        body
-        {
-            background-color: gray;
-        }
-        p
-        {
-            text-align: justify;
-            text-indent: 30px; 
-        }
-    </style>
+    <link rel="stylesheet" href="_css/estilo.css">
 </head>
 <body>
     <div id="interface">
@@ -41,12 +30,17 @@
         <h2>por Gustavo Guanabara</h2>
         <h3>Atualizado em 23/Abril/2013*</h3>
     </hgroup>
-        <!--https://www.youtube.com/watch?v=w1Mf4hPXurs&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=12&ab_channel=CursoemV%C3%ADdeo-->
+        <!--https://www.youtube.com/watch?v=A3mlsAk4G2k&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=13&ab_channel=CursoemV%C3%ADdeo-->
         <h2>O que é</h2>
         <p>O <span style="font-weight: bolder;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shyconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
+        <figure class="foto-legenda">
         <img src="_imagens/glass-quadro-homem-mulher.jpg" alt="">
-
+        <figcaption>
+            <h3>Google Glass</h3>
+            <p>Uma nova maneira de ver o mundo</p>
+        </figcaption>
+        </figure>
         <h1>Data de lançamento</h1>
         <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
