--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/index.html
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/index.html
@@ -16,13 +16,18 @@
 
         <img src="_imagens/glass-oculos-preto-peq.png">
 
-        Menu Principal
-        - Home
-        - Especificações
-        - Fotos
-        - Multimídia
-        - Fale conosco
+        <nav>
+        <h1>Menu Principal</h1>
+        <ul>
+        <li>Home</li>
+        <li>Especificações</li>
+        <li>Fotos</li>
+        <li>Multimídia</li>
+        <li>Fale conosco</li>
+        </ul>
+        </nav>
         </header>
+        
 
     <hgroup>
         <h3>Tecnologia > Inovações</h3>
@@ -30,7 +35,7 @@
         <h2>por Gustavo Guanabara</h2>
         <h3>Atualizado em 23/Abril/2013*</h3>
     </hgroup>
-        <!--https://www.youtube.com/watch?v=A3mlsAk4G2k&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=13&ab_channel=CursoemV%C3%ADdeo-->
+        <!--https://www.youtube.com/watch?v=EbVG8_5Pyz0&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=14&ab_channel=CursoemV%C3%ADdeo-->
         <h2>O que é</h2>
         <p>O <span style="font-weight: bolder;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shyconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
