--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/index.html
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/index.html
@@ -6,11 +6,12 @@
     <title>Projeto Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css">
 
-    <!--https://www.youtube.com/watch?v=QMAe5GMT_Ew&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=24&ab_channel=CursoemV%C3%ADdeo-->
+    <!-- 4:20 https://www.youtube.com/watch?v=zfrX_VZ5Fb4&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=26&ab_channel=CursoemV%C3%ADdeo-->
             
 </head>
 <body>
     <div id="interface">
+        
         <header id="header">
         <hgroup>
         <h1>Google Glass</h1>
@@ -21,12 +22,14 @@
 
         <nav id="menu">
         <h1>Menu Principal</h1>
-        <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="specs.html">Especificações</a></li>
-        <li><a href="fotos.html">Fotos</a></li>
-        <li><a href="multimidia.html">Multimídia</a></li>
-        <li><a href="fale-conosco.html">Fale conosco</a></li>
+        <ul onmouseout="mudaFotoPrincipal('_imagens/glass-oculos-preto-peq.png')">
+
+        <li onmouseover="mudaFotoPrincipal('_imagens/home.png')"><a href="index.html">Home</a></li>
+        <li onmouseover="mudaFotoPrincipal('_imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
+        <li onmouseover="mudaFotoPrincipal('_imagens/Fotos.png')"><a href="fotos.html">Fotos</a></li>
+        <li onmouseover="mudaFotoPrincipal('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+        <li onmouseover="mudaFotoPrincipal('_imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+
         </ul>
         </nav>
         </header>
@@ -93,5 +96,9 @@
         <a href="#" target="_blank">Facebook</a>  | <a href="#" target="_blank">Twitter</a></p>
         </footer>
     </div>
+
+
+
+    <script src="_javascript/funcoes.js"></script>
 </body>
 </html>
