--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/specs.html
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/specs.html
@@ -1,23 +1,58 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projeto Google Glass</title>
+    <link rel="stylesheet" href="_css/estilo.css">
 
-[AQUI ENTRA UMA FOTO]
+    <!-- 4:20 https://www.youtube.com/watch?v=zfrX_VZ5Fb4&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=26&ab_channel=CursoemV%C3%ADdeo-->
+            
+</head>
+<body>
+    <div id="interface">
+        
+        <header id="header">
+        <hgroup>
+        <h1>Google Glass</h1>
+        <h2>revolução do Google está chegando</h2>
+        </hgroup>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+        <img id="icone" src="_imagens/especificacoes.png">
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+        <nav id="menu">
+        <h1>Menu Principal</h1>
+        <ul onmouseout="mudaFotoPrincipal('_imagens/especificacoes.png')">
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+        <li onmouseover="mudaFotoPrincipal('_imagens/home.png')"><a href="index.html">Home</a></li>
+        <li onmouseover="mudaFotoPrincipal('_imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
+        <li onmouseover="mudaFotoPrincipal('_imagens/Fotos.png')"><a href="fotos.html">Fotos</a></li>
+        <li onmouseover="mudaFotoPrincipal('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+        <li onmouseover="mudaFotoPrincipal('_imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 
-[AQUI ENTRA UMA IMAGEM]
+        </ul>
+        </nav>
+        </header>
 
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+        Glass > Especificações
+        Raio-X no Google Glass
+        por Gustavo Guanabara
+        Atualizado em 01/Maio/2013
+
+        Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+
+        [AQUI ENTRA UMA IMAGEM]
+
+        Copyright 2013 - by Gustavo Guanabara<
+        Facebook | Twitter
+        <footer id="rodape">
+            <p>Copyright &copy;  2013 - by Gustavo Guanabara <br> (Edited by: Luiz Claudio) <br>
+            <a href="#" target="_blank">Facebook</a>  | <a href="#" target="_blank">Twitter</a></p>
+            </footer>
+</div>
+
+
+
+<script src="_javascript/funcoes.js"></script>
+</body>
+</html>
