--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/fale-conosco.html
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/fale-conosco.html
@@ -33,11 +33,17 @@
         </ul>
         </nav>
         </header>
+        <article id="principal">
+            <header id="header-artigo">
+            <hgroup>
+                <h3>Fale Conosco > Contato</h3>
+                <h1>Formulário de Contato</h1>
+                <h2>por Gustavo Guanabara</h2>
+                <h3 class="direita">Atualizado em 01/Maio/2013*</h3>
+            </hgroup>
+            </header>
+        </article>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
 
 Identificação do Usuário
     Nome:
@@ -67,8 +73,6 @@ Quero um Google Glass
 
 [BOTÃO ENVIAR]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
 <footer id="rodape">
     <p>Copyright &copy;  2013 - by Gustavo Guanabara <br> (Edited by: Luiz Claudio) <br>
     <a href="#" target="_blank">Facebook</a>  | <a href="#" target="_blank">Twitter</a></p>
