--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/multimidia.html
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/multimidia.html
@@ -33,20 +33,22 @@
         </ul>
         </nav>
         </header>
-
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
+        <article id="principal">
+            <header id="header-artigo">
+            <hgroup>
+                <h3>Glass > Multimídia</h3>
+                <h1>Sons e Vídeos</h1>
+                <h2>por Gustavo Guanabara</h2>
+                <h3 class="direita">Atualizado em 01/Maio/2013*</h3>
+            </hgroup>
+            </header>
+        </article>
 
 Áudio e Vídeo
 
 [AQUI ENTRA UM VÍDEO]
 [AQUI ENTRA UM ÁUDIO]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
 <footer id="rodape">
     <p>Copyright &copy;  2013 - by Gustavo Guanabara <br> (Edited by: Luiz Claudio) <br>
     <a href="#" target="_blank">Facebook</a>  | <a href="#" target="_blank">Twitter</a></p>
