--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/fotos.html
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/fotos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="stylesheet" href="_css/fotos.css">
 
     <!-- 4:20 https://www.youtube.com/watch?v=zfrX_VZ5Fb4&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=26&ab_channel=CursoemV%C3%ADdeo-->
             
@@ -45,14 +46,18 @@
         </article>
 
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+<p>
+    Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+</p>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+<ul id="album-fotos">
+    <li id="f01"><span>Agenda e lembretes</span></li> 
+    <li id="f02"><span>Sergey Brin usando o Glass</span></li> 
+    <li id="f03"><span>Leve e compacto</span></li> 
+    <li id="f04"><span>Sensação de uma tela de 50"</span></li>
+    <li id="f05"><span>Vários tipos de lente</span></li> 
+    <li id="f06"><span>Informações importantes</span></li>
+</ul>
 
 <footer id="rodape">
     <p>Copyright &copy;  2013 - by Gustavo Guanabara <br> (Edited by: Luiz Claudio) <br>
